k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ai-ml
  name: ai-ml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-ml
  template:
    metadata:
      labels:
        app: ai-ml
    spec:
      containers:
        - image: quay.io/rohanp/python-ml:latest
          imagePullPolicy: Always
          name: ai-ml
          ports:
            - containerPort: 8080
              protocol: TCP
