k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ai-ml
  name: ai-ml
spec:
  type: ClusterIP
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: ai-ml
