k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ai-ml
  name: ai-ml
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: ai-ml
    weight: 100
